fixed some spacing issues

--- a/src/components/dashboard/Dashboard.module.scss
+++ b/src/components/dashboard/Dashboard.module.scss
@@ -1,6 +1,12 @@
+@import "../../styles/abstracts.scss";
+
 .dashboard {
   background-color: var(--color-grey-1);
   min-height: 100vh;
 
   padding: 3.5rem 5rem;
+
+  @include respond(phone-small) {
+    padding: 3rem 4rem;
+  }
 }
