--- a/src/components/weatherBar/current/CurrentWeather.module.scss
+++ b/src/components/weatherBar/current/CurrentWeather.module.scss
@@ -10,10 +10,10 @@
     padding: 6rem 0 3.5rem 0;
   }
   @include respond(phone-small) {
-    padding: 4rem 0 3.5rem 0;
+    padding: 3rem 0 3rem 0;
   }
   @include respond(phone-v-small) {
-    padding: 0.1rem 0;
+    padding: 0;
   }
 
   figure {
@@ -86,10 +86,10 @@
       margin-top: 10.5rem;
     }
     @include respond(phone-small) {
-      margin-top: 8.5rem;
+      margin-top: 6.5rem;
     }
     @include respond(phone-v-small) {
-      margin-top: 4.5rem;
+      margin-top: 3.5rem;
     }
   }
 }
