--- a/src/components/weatherBar/forecast/Hour.module.scss
+++ b/src/components/weatherBar/forecast/Hour.module.scss
@@ -14,6 +14,9 @@
   @include respond(tab-port) {
     padding: 1.5rem;
   }
+  @include respond(phone-small) {
+    padding: 1.5rem 1rem;
+  }
   @include respond(phone-v-small) {
     padding: 1.5rem 0;
   }
