--- a/src/components/weatherBar/sunActivity/SunActivity.module.scss
+++ b/src/components/weatherBar/sunActivity/SunActivity.module.scss
@@ -9,7 +9,7 @@
     padding-top: 3rem;
   }
   @include respond(phone-v-small) {
-    padding-top: 1.5rem;
+    padding-top: 1rem;
   }
 
   &__activity {
